# ps5-image-forge-linux

./: .dockerignore  .gitignore  .gitmodules  Dockerfile.build  LICENSE  README.md  ps5-image-forge-linux.spec  pyproject.toml
hooks/: hook-lazy_mkpfs.py  rthook_lazy_mkpfs.py
ps5_image_forge_linux/: __init__.py  __main__.py  builder.py  exfat_helper.sh  gui.py  main.py  root_helper.py  ufs2_engine.py
ps5_image_forge_linux/widgets/: log_view.py  progress_bar.py
scripts/: build-docker.sh  build.sh  install-desktop.sh  patch-lazy-mkpfs.py  run.sh
