[project]
name = "ps5-image-forge-linux"
version = "0.1.0"
description = "GUI application for creating PS5 game dump images in multiple formats (FFPKG, EXFAT, FFPFSC)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0" }
dependencies = [
    "PyQt6>=6.6",
    "cryptography>=47.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.12",
]
build = [
    "PyInstaller>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ps5_image_forge_linux"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
